src/test/contracts/positive/self_address_in_lambda.mligo
let main (p, s : unit * (unit -> address)) : operation list * (unit -> address) =
  (([] : operation list), (fun (u : unit) -> Tezos.self_address))
