src/test/contracts/negative/error_typer_5.mligo
let foo : integer = 3

let main (p:int) (storage : int) =
  (([] : operation list) , p + foo)
